--- a/PROJECT_DS/project.ipynb
+++ b/PROJECT_DS/project.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Programming for Data Science\n",
     "\n",
-    "## Project Title: Book Price Tracker\n",
+    "## Project Title: Book  Tracker\n",
     "\n",
     "**Students:** Salah aldeen - 202111136 \\\\ Rashed Alfayez -202210706\n",
     "\n",
